--- a/src/css/About.css
+++ b/src/css/About.css
@@ -82,7 +82,10 @@
     }
 
     .about-img-wrapper {
+        align-items: center;
+        display: flex;
         height: fit-content;
+        justify-content: center;
         margin-top: 12px;
     }
     
