--- a/src/css/Introduction.css
+++ b/src/css/Introduction.css
@@ -147,11 +147,12 @@
     }
 
     .intro-job-role {
-        font-size: 21px;
+        font-size: 23px;
     }
 
     .intro-location {
-        font-size: 16px;
+        font-size: 18px;
+        text-shadow: none;
     }
 
     .intro-text {
@@ -181,14 +182,14 @@
         display: flex;
         flex: 0 0 auto;
         justify-content: center;
-        padding-top: 60px;
+        padding-top: 70px;
         width: 100%;
     }
 
     .resume-button {
         align-self: center;
         appearance: none;
-        font-size: 10px;
+        font-size: 12px;
         height: 30px;
         justify-self: center;
         margin-left: 0vw;
@@ -198,7 +199,7 @@
 
     .self-image {
         left: 0%;
-        max-width: 60%;
+        max-width: 70%;
         position: static;
         top: 0%;
         transform: translate(0%, 0%);
